# dester-linter

./: .gitignore  README.md  comment_rule.py  dester.py  pyproject.toml  setup.py  test.py
src/: __init__.py  blank_line_rule.py  comment_rule.py  dester.py  dester_entry.py  indentation_rule.py  newline_rule.py
tests/: test_blank_line_rule.py  test_comment_rule.py  test_indentation_rule.py  test_newline_line_rule.py
