[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dester-linter"
version = "0.0.1"
authors = [
  { name="Krystyna Kalinchuk", email="christinakalinchuk@gmail.com" },
]
description = "A dester-linter to lint LaTeX files"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.3"
]

[project.scripts]
dester-linter = "src.dester:main"

[project.urls]
"Homepage" = "https://github.com/kalinchukkristina/dester-linter"
"Bug Tracker" = "https://github.com/kalinchukkristina/dester-linter/issues"