[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dester-linter"
version = "1.0.0"
authors = [
  { name="Krystyna Kalinchuk", email="christinakalinchuk@gmail.com" }
]
description = "A dester-linter to format LaTeX files"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.3"
]
dynamic = ["version", "description"]

[project.scripts]
dester-linter = "src.dester:main"

[project.urls]
"Homepage" = "https://github.com/kalinchukkristina/dester-linter"
"Bug Tracker" = "https://github.com/kalinchukkristina/dester-linter/issues"